		 (fixes  #119)
		-[Core] Improved performance of GetTypesToRegister method and the Register and RegisterCollection
		 overloads that accept a list of collections.
		-[Core] Check added to InstanceProducer constructor to prevent incompatible Registration objects 
		 from being supplied. (fixes #52)
		-[Core] Exception message improved in case batch-registration skipped decorator. (fixes #13)


Version 3.0.5 (v3.0.5 RTM) 2015-09-03

	Bug fixes:
		-[Core] Unconditional generic registration with type constraint could not be made when
		 AllowOverridingRegistrations  was set to true. (fixes #116)
		-[Core] Improved exception message that communicates that registrations of collections are separated
		 from other registrations. (fixes #115)


Version 3.0.4 (v3.0.4 RTM) 2015-08-31

	Bug fixes:
		-[Core] Overriding a registration failed when done with same implementation, and registration of
		 conditional non-generic registrations was accidentally allowed. (fixes #114)
		-[Core] ResolveUnregisteredType registrations didn't get cached. (fixes #113)


Version 3.0.3  (v3.0.3 RTM) 2015-08-27

	Bug fixes:
		-[Core] Container.Verify() does not dispose created instances, while running in an active scope.
		 This is especially a problem with the WebRequestLifestyle, because during application start, an
		 active HttpContext is available. (fixes #95)
		-[Core] RegisterConditional with type factory always injected the first resolved type. (fixes #104)
		-[Core] Suppression of Lifestyle mismatch worked on wrong registration. (fixes #108)


Version 3.0.2 (v3.0.2 RTM) 2015-08-21

	Bug fixes:
		-[MVC] Issue #98 caused SimpleInjectorDependencyResolver to break. (fixes #99)
		-[WebApi] Issue #98 caused SimpleInjectorWebApiDependencyResolver to break. (fixes #99)


Version 3.0.1 (v3.0.1 RTM) 2015-08-20

	Breaking Changes:
		-[Core] Unregistered collections are not resolved by default as empty collections (fixes #98).

	Bug fixes: