@@ -15,6 +15,8 @@ Version 3.1.0 (v3.1.0 RTM)
 		-[Core] Check added to InstanceProducer constructor to prevent incompatible Registration objects 
 		 from being supplied. (fixes #52)
 		-[Core] Exception message improved in case batch-registration skipped decorator. (fixes #13)
+		-[Core] Lifestyle.CreateRegistration and Container.AddRegistration methods now throw a clear
+		 exception explaining that open generic types can't be supplied. (fixes #126)
 
 
 Version 3.0.5 (v3.0.5 RTM) 2015-09-03
